bug: z-index main

--- a/style.css
+++ b/style.css
@@ -38,8 +38,9 @@ body {
   background: var(--colorWhite);
   border-radius: 30px;  
   box-shadow: 5px 10px 8px gray;
-  width: 50%;
-  height: 70%;
+  width: 40vw;
+  height: 80vh;
+  z-index: 99;
 }
 
 .hero {
@@ -91,7 +92,7 @@ body {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   padding: 2rem 1.5rem;
-
+  gap: 2rem;
 }
 
 .content-statistics__item .num {
